[package]
name = "mnist_test"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candle-core = { path = "../../candle-core" }
candle-nn = { path = "../../candle-nn" }
candle-datasets = { path = "../../candle-datasets" }

image = "0.24"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
